output/dev/llvm/stringescapes.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/stringescapes.llvm:7:13: error: '@print_string' defined with type 'void (i32*)*'
  call void @print_string([31 x i16] [i16 12578, i16 29788, i16 23602, i16 13174, i16 29276, i16 23604, i16 13678, i16 24924, i16 23606, i16 14182, i16 25180, i16 23608, i16 14684, i16 8796, i16 12337, i16 34, i16 19192, i16 -3392, i16 32761, i16 0, i16 19192, i16 -3392, i16 32761, i16 0, i16 19152, i16 -3392, i16 32761, i16 0, i16 0, i16 0, i16 0])
            ^
